fixed some spacing issues

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -43,10 +43,12 @@ nav a {
     color: white;
     text-decoration: none;
     padding: 35px;
+    padding-right: 60px;
+    padding-left: 60px;
 }
 nav a:hover {
-    background-color: #396E94;
-    color: purple;
+    background-color: #1b3547;
+    color: rgb(197, 197, 197);
 }
 nav {
     display: flex;
@@ -69,10 +71,12 @@ nav {
 }
 #hero-msg h1{
     text-align: center;
+    text-shadow: black;
 }
 #hero-msg h4{
     text-align: center;
     color: white;
+    margin-top: -25px;
 }
 #hero-img {
     width: 100%;    
@@ -114,10 +118,10 @@ nav {
     grid-column: 6/10;
     grid-row: 6/7;
     border-radius: 25px;
-    box-shadow: 5px 5px 10px #6f7364;
+    box-shadow: 5px 5px 10px #000000;
     height: 250px;
     margin-top: 50px;
-    border: black solid 5px
+    border: black solid 1px
    
 }
 .msg h2 {
@@ -170,14 +174,18 @@ h2 {
     margin: 200px 0;
     grid-column: 5/7;
     grid-row: 2/3;
+    width: 100%;
 }
 .rapids-card {
     margin: 200px 0;
     grid-column: 8/10;
     grid-row: 2/3;
+    width: 100%;
 }
 .logo {
     width: 80px;
+    height: 80px;
+    padding: 7px;
 }
 #logo_link {
     padding-top: 5px;
@@ -190,10 +198,11 @@ h2 {
     padding-top: 10px;
 }
 .card-img {
-    border: 10px solid black;
+    border: 0px solid black;
     transition: transform .5s;
-    box-shadow: 5px 5px 10px #6f7364;
+    box-shadow: 5px 5px 10px #333333;
     width: 100%;
+    margin-top: -200px;
 }
 .card-img:hover {
     opacity: .6;
@@ -202,7 +211,7 @@ h2 {
 .mountains {
     grid-column: 2/7;
     grid-row: 6/7;
-    box-shadow: 5px 5px 10px #6f7364;
+    box-shadow: 5px 5px 10px #1b1b1b;
     border: 30px;
 }
 @media screen and (max-width: 900px) {
